--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,3 +22,9 @@ python-dotenv>=1.0.0
 
 # Utilities
 python-dateutil>=2.9.0
+
+# Testing
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+pytest-mock>=3.12.0
+httpx>=0.28.0
